Säuberung des Codes und Bug-Fixes